# episko

./: .envrc  .gitignore  Cargo.toml  Justfile  Makefile  README.md  bun.lockb  flake.nix  git-conventional-commits.yaml  init.sh  manifest.toml  ownNotices.txt  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
.git-hooks/: commit-msg
.github/: renovate.json
.github/workflows/: build-application.yml  coverage.yml  docs.yml  format.yml  lint.yml  publish-artifacts.yml  release.yml  rust-documentation.yml  sem-rel.yml  test-build.yml  test.yml
attribution/: dependencies.toml
episko_cli/: Cargo.toml  config.toml  manifest.toml  migrations
episko_cli/src/: cli.rs  creation.rs  lib.rs  main.rs  removal.rs  validation.rs
episko_cli/src/cli/: prompts.rs
episko_derive/: Cargo.toml
episko_derive/src/: lib.rs
episko_gui_backend/: Cargo.toml  tauri.conf.json
episko_gui_backend/capabilities/: default.json
episko_gui_backend/icons/: icon.icns
episko_gui_backend/src/: commands.rs  lib.rs  main.rs  model.rs  state.rs
episko_gui_backend/src/model/: dco.rs  dto.rs  preview.rs
episko_lib/: .env.example  Cargo.toml  README.md  episko.db  episko.db-shm  episko.db-wal  manifest1.toml  test.db-shm  test.db-wal
episko_lib/migrations/: 20250202083547_add_tables.down.sql  20250202083547_add_tables.up.sql
episko_lib/src/: config.rs  database.rs  files.rs  lib.rs  metadata.rs  statistics.rs
episko_lib/src/config/: config_controller.rs  config_handler.rs
episko_lib/src/database/: dao.rs  database_handler.rs  database_object.rs  handler.rs  insert_metadata.rs  remove_metadata.rs  retrieve_metadata.rs  retrieve_metrics.rs  update_metadata.rs  validate_stored_metadata.rs
episko_lib/src/files/: config.rs  file_handler.rs  metadata.rs
episko_lib/src/metadata/: build_system.rs  builder.rs  category.rs  ide.rs  language.rs  metadata_handler.rs  property.rs
episko_lib/src/statistics/: statistic_handler.rs
episko_lib/tests/: load_test_10000.rs  load_test_2000.rs
episko_lib/tests/common/: mod.rs
episkos_cli/: Cargo.toml  manifest.toml
episkos_cli/src/: cli (conflicted copy 2025-01-23 161955).rs  cli (conflicted copy 2025-01-25 095018).rs  cli.rs  creation.rs  lib.rs  main.rs  removal.rs  validation.rs
episkos_cli/src/cli/: prompts.rs
episkos_gui_backend/: Cargo.toml
episkos_gui_backend/src/: commands.rs  main.rs
episkos_lib/: Cargo.toml  manifest.toml
episkos_lib/src/: file_system_handler.rs  files.rs  lib.rs  metadata.rs
episkos_lib/src/files/: file_handler.rs  metadata.rs
episkos_lib/src/metadata/: build_system.rs  builder.rs  category.rs  ide.rs  language.rs  property.rs
src/: app.css
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/lib/: commands.svelte.ts  commands.ts  index.ts  types.ts  utils.test.ts  utils.ts
src/lib/components/: app-sidebar.svelte  nav-main.svelte  nav-secondary.svelte  nav-user.svelte
src/lib/schemas/: buildSystem.ts  category.ts  ide.ts  language.ts  metadata.test.ts  metadata.ts  pagedData.ts  statistics.ts
src/routes/: +layout.svelte  +page.svelte  metadata-state.svelte.ts  scroll-state.svelte.ts
src/routes/all-projects/: +page.svelte  columns.ts  data-table.svelte
src/routes/create-project/: +page.svelte
src/routes/edit-project/: +page.svelte  +page.ts
src/routes/project/: +page.svelte  +page.ts  DetailView.svelte  state.svelte.ts
src/routes/settings/: +page.svelte
src/routes/statistics/: +page.svelte  PieStatistic.svelte  state.svelte.ts
utils/: clear_data.sh
utils/data-generator/: go.mod  main.go  manifest.toml
utils/fake-data-1/Antelopewait/: manifest.toml
utils/fake-data-1/Apeshould/: manifest.toml
utils/fake-data-1/Azureability/: manifest.toml
utils/fake-data-1/Beigecompany/: manifest.toml
utils/fake-data-1/Blackcatalog/: manifest.toml
utils/fake-data-1/Blackpatience/: manifest.toml
utils/fake-data-1/Bluegrowth/: manifest.toml
utils/fake-data-1/Brownaircraft/: manifest.toml
utils/fake-data-1/Brownarmy/: manifest.toml
utils/fake-data-1/CadetBluebelief/: manifest.toml
utils/fake-data-1/Cashdive/: manifest.toml
utils/fake-data-1/Cheststack/: manifest.toml
utils/fake-data-1/Crewwill/: manifest.toml
utils/fake-data-1/Crimsonluxury/: manifest.toml
utils/fake-data-1/DarkGraycase/: manifest.toml
utils/fake-data-1/DimGreyline/: manifest.toml
utils/fake-data-1/Exaltationmight/: manifest.toml
utils/fake-data-1/Frogbeing/: manifest.toml
utils/fake-data-1/Goldshould/: manifest.toml
utils/fake-data-1/Hostbeing/: manifest.toml
utils/fake-data-1/Impalacry/: manifest.toml
utils/fake-data-1/Indigoclarity/: manifest.toml
utils/fake-data-1/Ivorything/: manifest.toml
utils/fake-data-1/Joylisten/: manifest.toml
utils/fake-data-1/Juicershould/: manifest.toml
utils/fake-data-1/Juicesmell/: manifest.toml
utils/fake-data-1/Leapwatch/: manifest.toml
utils/fake-data-1/LightYellowwoman/: manifest.toml
utils/fake-data-1/Limewindow/: manifest.toml
utils/fake-data-1/Lionclose/: manifest.toml
utils/fake-data-1/Lionmay/: manifest.toml
utils/fake-data-1/MediumVioletRedeconomics/: manifest.toml
utils/fake-data-1/Minkare/: manifest.toml
utils/fake-data-1/Motivationpaint/: manifest.toml
utils/fake-data-1/Orangejacket/: manifest.toml
utils/fake-data-1/Oxbe/: manifest.toml
utils/fake-data-1/Partyopen/: manifest.toml
utils/fake-data-1/Patrolhas/: manifest.toml
utils/fake-data-1/Perutowel/: manifest.toml
utils/fake-data-1/Purseam/: manifest.toml
utils/fake-data-1/SeaShelllove/: manifest.toml
utils/fake-data-1/Sea_Liondrink/: manifest.toml
utils/fake-data-1/Shrimpwait/: manifest.toml
utils/fake-data-1/Snakewill/: manifest.toml
utils/fake-data-1/Socksbe/: manifest.toml
utils/fake-data-1/Stairsam/: manifest.toml
utils/fake-data-1/Tripbow/: manifest.toml
(+2075 files in other folders)
