[workspace]
members = ["episko_gui_backend", "episko_lib", "episko_cli"]
resolver = "2"

[workspace.package]
version = "0.0.1-dev"
license = "GPL-3.0-or-later"
authors = ["Simon Blum", "Ben Oeckl", "Paul Stöckle", "Maximilian Rodler"]
edition = "2021"
description = "TBC: Project for University"
repository = "https://github.com/SoftwareEngineeringOne/episko"

[workspace.dependencies]
episko_lib = { path = "episko_lib", version = "0.0.1-dev" }
