[workspace]
members = ["episko_gui_backend", "episko_lib", "episko_cli", "episko_derive"]
resolver = "3"

[workspace.package]
version = "1.3.0"
license = "GPL-3.0-or-later"
authors = ["Simon Blum", "Ben Oeckl", "Paul Stöckle", "Maximilian Rodler"]
edition = "2024"
description = "TBC: Project for University"
repository = "https://github.com/SoftwareEngineeringOne/episko"

[workspace.dependencies]
thiserror = "2.0"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.12.0", features = ["serde", "v4"] }
episko_lib = { path = "episko_lib", version = "1" }
episko_derive = { path = "episko_derive", version = "1"}
