[package]
name = "episko_cli"
description = "Cli for the episko project"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
camino = "1.1.9"
clap = { version = "4.5.26", features = ["derive"] }
color-eyre = "0.6.3"
console = "0.15.10"
dialoguer = "0.11.0"
dotenvy = "0.15.7"
episko_lib.workspace = true
tokio = "1.43.0"

[dev-dependencies]
atty = "0.2.14"
sqlx = "0.8.3"
