[package]
name = "episko_lib"
description = "Library for episko project"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["files"]
files = []

[dependencies]
chrono = { workspace = true, features = ["serde"] }
uuid.workspace = true
thiserror.workspace = true
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"

[[bin]]
name = "lib_debug"
path = "src/bin/main.rs"

