[package]
name = "episko_lib"
description = "Library for episko project"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["files", "database"]
files = []
database = []

[dependencies]
chrono = { workspace = true, features = ["serde"] }
uuid.workspace = true
thiserror.workspace = true
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["chrono", "runtime-tokio", "sqlite", "uuid"] }
dotenvy = "0.15.7"
tokio = {version = "1.43.0", features = ["full"]}
async-trait = "0.1.86"
episko_derive = { path = "../episko_derive"}

[[bin]]
name = "lib_debug"
path = "src/bin/main.rs"

