[package]
name = "episkos"
version = "0.0.1"
license = "MIT"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# tauri-plugin-shell = "2" # uncomment to use shell
serde_json = "1"
serde = { version = "1", features = ["derive"] }
